--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -2,8 +2,29 @@
     title="Entre com sua conta"
     primaryBtnText="Entrar"
     secondaryBtnText="Criar conta"
+    (submit)="submit()"
+    (navigate)="navigate()"
+    [disabledPrimaryBtn]="!loginForm.valid"
 >
     <form [formGroup]="loginForm">
-        
+        <app-primary-input
+            formControlName="email"
+            inputName="email"
+            type="email"
+            label="Email" 
+            placeholder="johndoe@gmail.com"
+        >
+            <img src="/assets/svg/email-icon.svg" />
+        </app-primary-input>
+        <app-primary-input
+            formControlName="password"
+            inputName="password"
+            type="password"
+            label="Senha"
+            placeholder="******"
+        >
+        <img src="/assets/svg/password-icon.svg" />
+        </app-primary-input>
+        <span>Esqueceu sua senha?</span>
     </form>
 </app-default-login-layout>
